respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Operadores__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Proveedor (SCP)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Operadores</relationshipLabel>
        <relationshipName>Operadores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>An_ope__c</fullName>
        <label>Año</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apto_ope__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calle__c</fullName>
        <description>Precisa la calle en que está ubicado el domicilio del operador del autotransporte.</description>
        <inlineHelpText>Precisa la calle en que está ubicado el domicilio del operador del autotransporte.</inlineHelpText>
        <label>Calle</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cel_ope__c</fullName>
        <label>Celular</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Codigo_Postal_Operador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codigo Postal Operador</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Codigo Postal</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Operadores (Codigo Postal Operador)</relationshipLabel>
        <relationshipName>Operadores4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Colonia_Operador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Colonia Operador</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Colonia</value>
            </filterItems>
            <filterItems>
                <field>Catalogo_SAT__c.Clave_Relacion_SAT__c</field>
                <operation>equals</operation>
                <valueField>$Source.Codigo_Postal_Operador__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Operadores (Colonia Operador)</relationshipLabel>
        <relationshipName>Operadores5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Color_ope__c</fullName>
        <label>Color</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direcci_n__c</fullName>
        <formula>IF(  CONTAINS( Localidad_cat_op__c , &quot; &quot;)
,

 Calle__c &amp; &quot;, &quot; &amp; Num_Exterior__c &amp; &quot;-&quot; &amp; Numero_Interior__c &amp; &quot;, &quot; &amp; Colonia_Operador__r.Name &amp; &quot;, &quot; &amp; Codigo_Postal_Operador__r.Name &amp; &quot;, &quot; &amp;  Municipio_cat_op__c &amp; &quot;, &quot; &amp;  Estado_cat_op__c &amp; &quot;, &quot; &amp;  Pais_cat__c

,

Calle__c &amp; &quot;, &quot; &amp; Num_Exterior__c &amp; &quot;-&quot; &amp; Numero_Interior__c &amp; &quot;, &quot; &amp; Colonia_Operador__r.Name &amp; &quot;, &quot; &amp; Codigo_Postal_Operador__r.Name &amp; &quot;, &quot; &amp;   Localidad_cat_op__c &amp; &quot;, &quot; &amp;  Municipio_cat_op__c &amp; &quot;, &quot; &amp;  Estado_cat_op__c &amp; &quot;, &quot; &amp;  Pais_cat__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dirección</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado_Operador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Estado Operador</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Estado</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Operadores (Estado Operador)</relationshipLabel>
        <relationshipName>Operadores1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estado_cat_op__c</fullName>
        <formula>Codigo_Postal_Operador__r.Clave_Relacion_SAT__r.Clave_SAT__c &amp;&apos; &apos;&amp; Codigo_Postal_Operador__r.Clave_Relacion_SAT__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estado CP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecdic_ope__c</fullName>
        <label>Fecha Dictamen</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_Validado__c</fullName>
        <label>Fecha Validado</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fecha_de_vigencia_de_la_licencia__c</fullName>
        <label>Fecha de Vigencia de la Licencia</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finvig_ope__c</fullName>
        <label>Fin Vigencia</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Id_Recurso_Confiable__c</fullName>
        <description>credencial proporcionada por recurso confiable</description>
        <label>Id Recurso Confiable</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licvig_ope__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Licencia Vigente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Localidad_cat_op__c</fullName>
        <formula>Codigo_Postal_Operador__r.Localidad_Ref_CP__r.Clave_SAT__c &amp;&apos; &apos;&amp; Codigo_Postal_Operador__r.Localidad_Ref_CP__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Localidad CP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Localidad_operador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Localidad Operador</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Localidad</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Operadores (Localidad Operador)</relationshipLabel>
        <relationshipName>Operadores2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marca_ope__c</fullName>
        <label>Marca</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medprev_ope__c</fullName>
        <label>Med Preventiva</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medprevvig_ope__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Med Preventiva Vigente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Municipio_Operador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Municipio Operador</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Municipio</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Operadores (Municipio Operador)</relationshipLabel>
        <relationshipName>Operadores3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Municipio_cat_op__c</fullName>
        <formula>Codigo_Postal_Operador__r.Municipio_Ref_CP__r.Clave_SAT__c &amp;&apos; &apos;&amp; Codigo_Postal_Operador__r.Municipio_Ref_CP__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Municipio CP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_Exterior__c</fullName>
        <description>Expresa el número exterior en donde se ubica el domicilio del operador del autotransporte.</description>
        <inlineHelpText>Expresa el número exterior en donde se ubica el domicilio del operador del autotransporte.</inlineHelpText>
        <label>Num Exterior</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_Interior__c</fullName>
        <description>Expresa el número interior, en caso de existir, en donde se ubica el domicilio del operador del autotransporte.</description>
        <inlineHelpText>Expresa el número interior, en caso de existir, en donde se ubica el domicilio del operador del autotransporte.</inlineHelpText>
        <label>Num Interior</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numlicvig_ope__c</fullName>
        <label>Num. Licencia Vigente</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numplacaj_ope__c</fullName>
        <label>Num. Placa Caja</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numplatra_ope__c</fullName>
        <label>Num. Placa Tracto</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numtar_ope__c</fullName>
        <label>Num. Tarjeta de Circulación</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Obse_ope__c</fullName>
        <label>Observaciones</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Operador_Validado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Operador Validado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pais_cat__c</fullName>
        <formula>Codigo_Postal_Operador__r.Pais_RefCP__r.Clave_SAT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pais CP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pais_operador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pais Operador</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Pais</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Operadores</relationshipLabel>
        <relationshipName>Operadores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proovedor_validado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proovedor validado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RFC_Operador__c</fullName>
        <description>Registra el RFC del operador del autotransporte de carga federal.</description>
        <inlineHelpText>Registra el RFC del operador del autotransporte de carga federal.</inlineHelpText>
        <label>RFC Operador</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referencias__c</fullName>
        <description>Expresa una referencia geográfica adicional que permita una más fácil o precisa ubicación del operador del autotransporte</description>
        <inlineHelpText>Expresa una referencia geográfica adicional que permita una más fácil o precisa ubicación del operador del autotransporte</inlineHelpText>
        <label>Referencias</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Residencia_Fiscal__c</fullName>
        <description>Registra la clave del país de residencia para efectos fiscales del operador del autotransporte.</description>
        <inlineHelpText>Registra la clave del país de residencia para efectos fiscales del operador del autotransporte.</inlineHelpText>
        <label>Residencia Fiscal</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tarcir_ope__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tarjeta de Circulación</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Telefono_2__c</fullName>
        <label>Telefono Proveedor</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telefono_3__c</fullName>
        <label>Telefono Otro</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telfij_ope__c</fullName>
        <label>Teléfono fijo</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tipex_ope__c</fullName>
        <label>Tipo Examen</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_RelacionOP_c__c</fullName>
        <formula>&quot;01&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de Relación</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Truckstop_Email__c</fullName>
        <label>Truckstop Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Truckstop_Name__c</fullName>
        <label>Truckstop Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Truckstop_Phone__c</fullName>
        <label>Truckstop Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Validado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Validate_Pak_Control__c</fullName>
        <label>Validate Pak Control</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vehicle_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Operadores</relationshipLabel>
        <relationshipName>Operadores_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Operadores</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>RFC_Operador__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RFC_Operador__c</field>
            <operation>equals</operation>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Nombre Operador</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Operadores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>